식단+ 메인 병합 완성